# Learn_AV

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lcm/learn_av/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lcm/learn_av/: MainActivity.java  RecordActivity.java
app/src/main/java/com/lcm/learn_av/audio/: MediaManage.java
app/src/main/java/com/lcm/learn_av/manager/: RecordManager.java
app/src/main/java/com/lcm/learn_av/queue/: AudioData.java  DecodeQueueManager.java  RecordData.java  RecordQueueManager.java
app/src/main/java/com/lcm/learn_av/record/: AudioDecode.java  AudioEncode.java  Config.java  RecordCaptor.java
app/src/main/java/com/lcm/learn_av/record/handle/: DecodeHandleImp.java  DecodeRunnable.java  EncodeHandleImp.java  EncodeRunnable.java  FFmpegDecodeHandleImp.java  FFmpegEncodeHandleImp.java  RecordHandleImp.java  RecordRunnable.java
app/src/main/java/com/lcm/learn_av/record/handle/imp/: DecodeHandle.java  EncodeHandle.java  RecordHandle.java
app/src/main/java/com/lcm/learn_av/record/player/: AudioTrackManager.java
app/src/main/java/com/lcm/learn_av/record/util/: EchoControlUtil.java  SpeexUtils.java
app/src/main/java/com/lcm/learn_av/runnable/: DecodeHandleImp.java  DecodeRunnable.java  EncodeHandleImp.java  EncodeRunnable.java  RecordHandleImp.java  RecordRunnable.java
app/src/main/java/com/lcm/learn_av/runnable/imp/: DecodeHandle.java  EncodeHandle.java  RecordHandle.java
app/src/main/jni/: recordDecode.c  recordEncode.c  speex_dsp_jni.c  speex_jni.cpp
app/src/main/jni/ffmpeg/include/: cmdutils.c
app/src/main/jni/speex/libspeexdsp/: preprocess.c
app/src/main/res/layout/: activity_main.xml  activity_record.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lcm/learn_av/: ExampleUnitTest.java
doc/: CMake编译Speex.md  build_android.sh  build_android_one.sh  基础.md  编译FFmpeg.md
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/lcm/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/java/com/lcm/ffmpeg/: AudioActivity.java  FFmpegPlayer.java  MainActivity.java
ffmpeg/src/main/java/com/lcm/ffmpeg/audio/: AudioBuffer.java  CmdHandle.java  EncodeAndDecode.java  RecordCaptor.java  RecordEncode.java
ffmpeg/src/main/jni/: cmdHandle.c  encodeAndDecode.c  player.c  recordEncode.c
ffmpeg/src/main/jni/ffmpeg/include/: config.h  ffmpeg.c  ffmpeg.h
ffmpeg/src/main/res/layout/: activity_audio.xml  activity_main.xml
ffmpeg/src/test/java/com/lcm/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mediacodec/: build.gradle
mediacodec/src/androidTest/java/com/lcm/mediacodec/: ExampleInstrumentedTest.java
mediacodec/src/main/: AndroidManifest.xml
mediacodec/src/main/java/com/lcm/mediacodec/: MainActivity.java
mediacodec/src/main/java/com/lcm/mediacodec/audio/: AudioDecode.java  AudioEncode.java  RecordCaptor.java  WavEncode.java
mediacodec/src/main/java/com/lcm/mediacodec/utils/: MappedFileReader.java
mediacodec/src/main/res/layout/: activity_main.xml
mediacodec/src/test/java/com/lcm/mediacodec/: ExampleUnitTest.java
speex/: build.gradle
speex/src/androidTest/java/com/lcm/speex/: ExampleInstrumentedTest.java
speex/src/main/: AndroidManifest.xml
speex/src/main/cpp/: CMakeLists.txt  speex_jni.cpp
speex/src/main/cpp/libspeexdsp/: buffer.c  jitter.c  mdf.c  resample.c  scal.c
speex/src/main/java/com/lcm/speex/: MainActivity.java  Speex.java
speex/src/test/java/com/lcm/speex/: ExampleUnitTest.java
